docs/grammar.txt
gnu-stmt-expr = "(" "{" compound-stmt "}" ")"
prim = "(" expr ")" | gnu-stmt-expr | ident args? | num | strlit
funcall = ident "(" (assign ("," assign)*)? ")"
postfix = prim ("[" expr "]" | "++" | "--")*
unary = ("+" | "-" | "*" | "&" | "~" | "!") unary
		| postfix
		| "++" unary
		| "--" unary
		| "sizeof" unary
		| "_Alignof" unary         # extension
cast = unary
		| "(" type-name ")" cast
mul = cast ("*" cast | "/" cast | "%" cast)*
add = mul ("+" mul | "-" mul)*
shift = add ("<<" add | ">>" add)*
relational = shift ("<" shift | "<=" shift | ">" shift | ">=" shift)*
equality = relational ("==" relational | "!=" relational)*
and-expr = equality ("&" equality)*
eor-expr = and-expr ("^" and-expr)*
or-expr = eor-expr ("|" eor-expr)*
log-and-expr = or-expr ("&&" or-expr)*
log-or-expr = log-and-expr ("||" log-and-expr)*
cond-expr = log-or ("?" expr ":" cond-expr)?
assign-oper = "=" | "*=" | "/=" | "%=" | "+=" | "-=" | "<<=" | ">>=" | "&=" | "^=" | "|="
assign = cond-expr assign-oper assign
expr = assign
expr-stmt = expr? ";"
type-specifier = "_Bool" | "void" | "char" | "short" | "int" | "long" | "signed" | "unsigned"
alignment-specifier = "_Alignas" "(" num ")"
# Struct declarations not included here because the parsing is technically wrong.
declspec = (type-specifier | alignment-specififer)*
direct-declarator = ident ("[" num "]")*
abstract-declarator = pointer
					 | pointer? direct-abstract-declarator
direct-abstract-declarator = "(" abstract-declarator ")"
							| direct-abstract-declarator? "[" num "]"
type-name = declspec abstract-declarator?
declarator = "*"* direct-declarator
initalizer = expr
init-declarator = declarator
				| declarator "=" initalizer
declaration = declspec (init-declarator ("," init-declarator)*)? ";"
parameter-declaration = declspec declarator
parameter-list = parameter-declaration ("," parameter-declaration)*
function-definition = declspec declarator "(" parameter-list? ")" compound-stmt
stmt = "return" expr? ";"
      | "if" "(" expr ")" stmt ("else" stmt)?
      | "for" "(" expr-stmt expr? ";" expr? ")" stmt
      | "for" "(" declaration expr? ";" expr? ")" stmt
      | "while" "(" expr ")" stmt
      | "do" stmt "while" "(" expr ")" ";"
	  | "switch" "(" expr ")" stmt
	  | "case" num ":" stmt
	  | "default" ":" stmt
	  | "break" ";"
      | "continue" ";"
	  | "goto" ident ";"
	  | ident ":" stmt
	  | compound-stmt
	  | expr-stmt
compound-stmt = "{" (declaration | stmt)* "}"
global-variable = declspec declarator ("," declarator)* ";"
prog = (function-definition | global-variable)*
